<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="?dialogPreferredPadding"
    android:paddingTop="16dp"
    android:paddingEnd="?dialogPreferredPadding">

    <TextView
        android:id="@+id/tvPasswordDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/status_profile_message_set" />

    <com.example.ui.views.CustomTextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Profile.Edit.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/Profile.Edit.Input.SingleLine"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/auth_input_password_hint"
            android:inputType="textPassword" />
    </com.example.ui.views.CustomTextInputLayout>
</LinearLayout>