...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        style="@style/Notification.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background_tag_checked_new"
...
