...
            style="@style/TextInputLayoutStyle"
            app:endIconDrawable="@drawable/ic_calendar_new"
            app:endIconMode="custom"
            app:endIconTint="#C3996C">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/etBirthday"
                style="@style/TextInputAutoTextStyle"
                android:hint="@string/profile_birthday" />
        </com.example.ui.views.CustomTextInputLayout>


        <com.example.ui.views.passwordView.CustomPasswordView
...
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:checkViewText="@string/auth_user_agreement"
            app:isCheckable="true" />

        <com.example.ui.views.loading.CustomLoadingButton
            android:id="@+id/btn_save"
            style="@style/BtnLoadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:buttonText="@string/auth_action_register" />

...
